--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Hello webpack</title>
-    <link rel="stylesheet" href="styles/main.min.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="scripts/bundle.min.js"></script>
+    <script src="scripts/bundle.js"></script>
   </body>
 </html>
